# ib-2022-23

./: README.md
practica-3-nov/P78142-average/: P78142-average.cc  average  entrada.txt
practica-3-nov/practica05-expressions/: bool
practicas/practica-3-nov/P57548_sum_of_two_integer_numbers/: P57548_sum_of_two_integer_numbers.cc  sum
practicas/practica-3-nov/P62421-three-words/: P62421-three-words.cc  words
practicas/practica-3-nov/P78142-average/: entrada2.txt
practicas/practica-3-nov/practica05-expressions/: arithmetic_operators.cc  desinflado.cc  division.cc  expressions.md  tabla_de_verdad.cc
programacion/exercism/acronym/: README.md  acronym  acronym.cpp  acronym.h  acronym_test.cpp
programacion/exercism/acronym/.exercism/: metadata.json
programacion/exercism/complex-numbers/: HELP.md  complex_numbers.cpp  complex_numbers.h  complex_numbers_test.cpp
programacion/exercism/space-age/: space_age.h  space_age_test.cpp
programacion/exercism/space-age/.exercism/: metadata.json
programacion/jutge/largest-prime-factor-P15695/: largest-prime-factor.cc
programacion/otros/programa1/: CMakeLists.txt
programacion/otros/programa1/src/: programa1.cc  programa1.h  programa1_main.cc
programacion/otros/programa2/: CMakeLists.txt
programacion/otros/programa2/src/: programa2.cc  programa2.h  programa2_main.cc
